@@ -6,7 +6,7 @@ HTMLOUTPUTFILE weathermap.html
 
 FONTDEFINE 10 GillSans.ttf 8
 
-TITLE Testing SCALE changes
+TITLE 0.95 Test Map
 
 KEYPOS DEFAULT -1 -1 Traffic Load
 KEYTEXTCOLOR 0 0 0
@@ -57,17 +57,19 @@ NODE node20108
 	LABEL NODE1 {node:this:inscaletag}
 	POSITION 278 365
         USESCALE poop in
-        TARGET static:100:0
+	TARGET fping:212.21.100.67
 
 NODE node80111
 	LABEL RoundNODE
 	POSITION 702 298
 	ICON 32 32 round
 	LABELOFFSET S
+	TARGET fping:212.212.100.126
 
 NODE node00342
 	LABEL Node342
 	POSITION 593 82
+	TARGET fping:212.21.98.62
 
 NODE node00352
 	LABEL Node352
